# language_rust

./: .gitignore  Cargo.toml  README.md  build.rs
.sqlx/: query-c4b3ff90fda67f9f4a932fdeff97434cb5276c69b5d235fcc864ccbe53ff2696.json  query-d59e18666761d813e59ab8a457d6273a254e73405b038d6897a23655a0945299.json
migrations/: 20240529052604_language.sql
proto/: add_numbers.proto  base.proto  health.proto  hello.proto  language.proto
src/: add_numbers.rs  base.rs  health.rs  hello.rs  language.rs  main.rs
src/db/: mod.rs
src/handler/: health.rs  hello.rs  mod.rs  my_server.rs  numbers.rs  translations.rs
