[package]
name = "language_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"  # Needed for handling bytes in gRPC
futures = "0.3.1"
log = "0.4"
prost = "0.11"
simplelog = { version = "0.12.2", features = ["paris"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"]}
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"
